# AI-Code-Generator

backend/: pyproject.toml
backend/src/: .env  app.py  utils.py
backend/src/database/: db.py  models.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
